syntax="proto3";
package micromango;
option go_package="pkg/grpc/catalog";

import "reading.proto";

service Catalog {
  rpc GetManga(MangaRequest) returns (MangaResponse);
  rpc GetMangas(Empty) returns (MangaPreviewResponse);
  rpc AddManga(AddMangaRequest) returns (MangaResponse);
}

message Empty {}

message MangasResponse {
  repeated MangaResponse mangas = 1;
}

message MangaRequest {
  string mangaId = 1;
}

message MangaResponse {
  string mangaId = 1;
  string title = 2;
  string cover = 3;
  string description = 4;
  uint32 chapterNumber = 5;
  MangaContentResponse content = 6;
}

message MangaPreviewResponse {
  string mangaId = 1;
  string title = 2;
  string cover = 3;
}

message AddMangaRequest {
  string title = 1;
  string cover = 2;
  string description = 3;
}